Bug 460848 - UNDO won't update the screen if a layer is made by 'Insert as new layer.'
Summary: UNDO won't update the screen if a layer is made by 'Insert as new layer.'
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR major
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-22 12:16 UTC by spinear
Modified: 2022-10-28 07:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description spinear 2022-10-22 12:16:11 UTC
Krita

 Version: 5.2.0-prealpha (git 85a6656)



STEPS TO REPRODUCE

  Make a new document.

  Drag and drop any JPG file from Windows Explorer into Krita.

  Select 'Insert as new layer'

  Draw over on 'that' layer using the brush tool.

  Ctrl+Z to UNDO it.


OBSERVED RESULT

  Canvas won't update.
  It looks like UNDO didn't work but internally UNDO worked.
  If you draw over it, a weird block appears.


** I'm using Windows 11 22H2
Krita log displays I'm using Windows 10 but I'm not.

** ANGLE and OpenGL both have the same problem.
I changed to OpenGL to test this bug, which is why the log is displayed as OpenGL.

Thank you.



Krita

 Version: 5.2.0-prealpha (git 85a6656)
 Installation type: installer / portable package
 Hidpi: true

Qt

  Version (compiled): 5.12.12
  Version (loaded): 5.12.12

OS Information

  Build ABI: x86_64-little_endian-llp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: winnt
  Kernel Version: 10.0.22621
  Pretty Productname: Windows 10 (10.0)
  Product Type: windows
  Product Version: 10

Locale

  Languages: en_US, en_US
  C locale: C
  QLocale current: en
  QLocale system: ko
  QTextCodec for locale: UTF-8
  Process ACP: 65001 (UTF-8)
  System locale default ACP: 949   (ANSI/OEM - 한국어)

OpenGL Info
 
  Vendor:  "NVIDIA Corporation" 
  Renderer:  "NVIDIA GeForce RTX 3060/PCIe/SSE2" 
  Version:  "4.6.0 NVIDIA 517.40" 
  Shading language:  "4.60 NVIDIA" 
  Requested format:  QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
  Current format:  QSurfaceFormat(version 4.6, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples 0, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 1, colorSpace QSurfaceFormat::sRGBColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
     Version: 4.6
     Supports deprecated functions true 
     is OpenGL ES: false 
  supportsBufferMapping: true 
  supportsBufferInvalidation: true 
  forceDisableTextureBuffers: false 
  Extensions: 
     "GL_AMD_multi_draw_indirect" 
     "GL_EXT_rescale_normal" 
     "GL_NV_blend_equation_advanced" 
     "GL_ARB_derivative_control" 
     "GL_ARB_instanced_arrays" 
     "GL_ARB_debug_output" 
     "GL_NV_command_list" 
     "GL_EXT_texture_lod" 
     "GL_ARB_half_float_pixel" 
     "GL_EXT_semaphore" 
     "GL_NV_mesh_shader" 
     "GL_NV_vertex_array_range" 
     "GL_EXT_memory_object_win32" 
     "GL_NV_fragment_shader_barycentric" 
     "GL_NV_shader_thread_shuffle" 
     "GL_EXT_texture3D" 
     "GL_NV_transform_feedback" 
     "GL_WIN_swap_hint" 
     "GL_EXT_secondary_color" 
     "GL_EXT_blend_func_separate" 
     "GL_EXT_bindable_uniform" 
     "GL_NV_compute_program5" 
     "GL_EXT_vertex_array" 
     "GL_NV_register_combiners" 
     "GL_ARB_tessellation_shader" 
     "GL_ARB_vertex_attrib_binding" 
     "GL_EXT_texture_sRGB" 
     "GL_ARB_point_parameters" 
     "GL_OVR_multiview2" 
     "GL_EXT_texture_sRGB_R8" 
     "GL_ARB_texture_border_clamp" 
     "GL_ARB_vertex_program" 
     "GL_ARB_get_texture_sub_image" 
     "GL_ARB_occlusion_query" 
     "GL_NV_float_buffer" 
     "GL_EXT_texture_buffer_object" 
     "GL_EXT_texture_env_dot3" 
     "GL_NV_uniform_buffer_unified_memory" 
     "GL_ATI_texture_float" 
     "GL_EXT_separate_specular_color" 
     "GL_ARB_cull_distance" 
     "GL_EXT_Cg_shader" 
     "GL_ARB_shader_atomic_counters" 
     "GL_NV_conservative_raster_pre_snap_triangles" 
     "GL_EXT_texture_compression_rgtc" 
     "WGL_EXT_swap_control" 
     "GL_EXT_texture_edge_clamp" 
     "GL_ARB_draw_elements_base_vertex" 
     "GL_NV_texgen_reflection" 
     "GL_NV_gpu_program5" 
     "GL_NV_vertex_program3" 
     "GL_KTX_buffer_region" 
     "GL_NV_register_combiners2" 
     "GL_ARB_internalformat_query" 
     "GL_NV_alpha_to_coverage_dither_control" 
     "GL_ARB_sparse_texture" 
     "GL_ARB_multi_draw_indirect" 
     "GL_ARB_texture_barrier" 
     "GL_ARB_framebuffer_sRGB" 
     "GL_NV_vertex_array_range2" 
     "GL_ARB_shader_draw_parameters" 
     "GL_NV_conservative_raster" 
     "GL_IBM_rasterpos_clip" 
     "GL_ARB_copy_image" 
     "GL_ARB_compressed_texture_pixel_storage" 
     "GL_NV_path_rendering_shared_edge" 
     "GL_NV_pixel_data_range" 
     "GL_EXT_compiled_vertex_array" 
     "GL_ARB_ES3_1_compatibility" 
     "GL_NVX_conditional_render" 
     "GL_NV_representative_fragment_test" 
     "GL_KHR_robustness" 
     "GL_ARB_texture_storage_multisample" 
     "GL_ARB_map_buffer_range" 
     "GL_ARB_draw_buffers" 
     "GL_ARB_texture_compression_rgtc" 
     "GL_ARB_sampler_objects" 
     "GL_NV_packed_depth_stencil" 
     "GL_ATI_draw_buffers" 
     "GL_NV_fill_rectangle" 
     "GL_NV_shader_subgroup_partitioned" 
     "GL_EXTX_framebuffer_mixed_formats" 
     "GL_ARB_arrays_of_arrays" 
     "GL_EXT_blend_minmax" 
     "GL_AMD_seamless_cubemap_per_texture" 
     "GL_ARB_draw_buffers_blend" 
     "GL_NV_clip_space_w_scaling" 
     "GL_NV_ES1_1_compatibility" 
     "GL_NV_gpu_program4_1" 
     "GL_NV_gpu_program4" 
     "GL_SGIX_shadow" 
     "GL_ARB_timer_query" 
     "GL_NV_primitive_shading_rate" 
     "GL_NV_texture_rectangle" 
     "GL_NV_sample_mask_override_coverage" 
     "GL_ARB_texture_env_add" 
     "GL_SGIX_depth_texture" 
     "GL_ARB_imaging" 
     "GL_ARB_texture_buffer_object_rgb32" 
     "GL_NV_bindless_multi_draw_indirect_count" 
     "GL_KHR_robust_buffer_access_behavior" 
     "GL_ARB_fragment_shader_interlock" 
     "GL_ARB_color_buffer_float" 
     "GL_EXT_framebuffer_blit" 
     "GL_NV_copy_depth_to_color" 
     "GL_EXT_polygon_offset_clamp" 
     "GL_ARB_blend_func_extended" 
     "GL_IBM_texture_mirrored_repeat" 
     "GL_EXT_texture_filter_minmax" 
     "GL_NV_texture_rectangle_compressed" 
     "GL_ARB_vertex_type_10f_11f_11f_rev" 
     "GL_ARB_sparse_buffer" 
     "GL_NVX_progress_fence" 
     "GL_EXT_stencil_two_side" 
     "GL_NV_gpu_program_fp64" 
     "GL_ARB_multi_bind" 
     "GL_ARB_gpu_shader_int64" 
     "GL_EXT_texture_mirror_clamp" 
     "GL_NV_query_resource_tag" 
     "GL_NV_occlusion_query" 
     "GL_NVX_gpu_memory_info" 
     "GL_KHR_parallel_shader_compile" 
     "GL_S3_s3tc" 
     "GL_ARB_bindless_texture" 
     "GL_ARB_robustness" 
     "GL_EXT_texture_shared_exponent" 
     "GL_ARB_spirv_extensions" 
     "GL_NVX_nvenc_interop" 
     "GL_ARB_explicit_attrib_location" 
     "GL_EXT_framebuffer_multisample_blit_scaled" 
     "GL_NV_vertex_attrib_integer_64bit" 
     "GL_ARB_fragment_program" 
     "GL_EXT_framebuffer_sRGB" 
     "GL_EXT_stencil_wrap" 
     "GL_NV_multisample_coverage" 
     "GL_ARB_internalformat_query2" 
     "GL_EXT_shader_image_load_store" 
     "GL_EXT_texture_env_add" 
     "GL_NV_blend_square" 
     "GL_NV_blend_equation_advanced_coherent" 
     "GL_ARB_shader_group_vote" 
     "GL_ARB_texture_cube_map_array" 
     "GL_NV_path_rendering" 
     "GL_ARB_post_depth_coverage" 
     "GL_EXT_texture_compression_s3tc" 
     "GL_ARB_shading_language_100" 
     "GL_EXT_texture_sRGB_decode" 
     "GL_EXT_shadow_funcs" 
     "GL_ARB_transform_feedback2" 
     "GL_NV_geometry_shader_passthrough" 
     "GL_ARB_multisample" 
     "GL_ARB_shader_bit_encoding" 
     "GL_EXT_gpu_program_parameters" 
     "GL_NV_framebuffer_multisample_coverage" 
     "GL_ARB_gl_spirv" 
     "GL_ARB_shader_ballot" 
     "GL_ARB_texture_env_crossbar" 
     "GL_NV_point_sprite" 
     "GL_ARB_polygon_offset_clamp" 
     "GL_ARB_texture_env_combine" 
     "GL_ARB_ES3_compatibility" 
     "GL_NV_fragment_program_option" 
     "GL_OVR_multiview" 
     "GL_ARB_shader_clock" 
     "GL_ARB_shader_image_load_store" 
     "GL_ARB_draw_indirect" 
     "GL_EXT_texture_filter_anisotropic" 
     "GL_ARB_ES2_compatibility" 
     "GL_NV_bindless_texture" 
     "GL_EXT_multiview_texture_multisample" 
     "GL_ARB_texture_rgb10_a2ui" 
     "GL_ARB_pipeline_statistics_query" 
     "GL_EXT_transform_feedback2" 
     "GL_ARB_ES3_2_compatibility" 
     "GL_NV_gpu_multicast" 
     "GL_ARB_texture_cube_map" 
     "GL_ARB_framebuffer_no_attachments" 
     "GL_ARB_texture_buffer_range" 
     "GL_ARB_fragment_program_shadow" 
     "GL_ARB_fragment_coord_conventions" 
     "GL_EXT_packed_pixels" 
     "GL_EXT_texture_compression_latc" 
     "GL_EXT_geometry_shader4" 
     "GL_EXT_multi_draw_arrays" 
     "GL_ARB_clear_buffer_object" 
     "GL_EXT_vertex_attrib_64bit" 
     "GL_NV_explicit_multisample" 
     "GL_KHR_shader_subgroup" 
     "GL_NV_shading_rate_image" 
     "GL_ARB_compute_shader" 
     "GL_NV_query_resource" 
     "GL_ARB_texture_float" 
     "GL_ARB_seamless_cubemap_per_texture" 
     "GL_ARB_texture_buffer_object" 
     "GL_NV_fragment_coverage_to_color" 
     "GL_ARB_vertex_array_bgra" 
     "GL_ARB_uniform_buffer_object" 
     "GL_EXT_pixel_buffer_object" 
     "GL_EXT_vertex_array_bgra" 
     "GL_NV_memory_object_sparse" 
     "GL_ARB_shading_language_420pack" 
     "GL_NV_parameter_buffer_object2" 
     "GL_ARB_sparse_texture_clamp" 
     "GL_ARB_clear_texture" 
     "GL_NV_fog_distance" 
     "GL_ARB_shadow" 
     "GL_NVX_multigpu_info" 
     "GL_EXT_blend_subtract" 
     "GL_EXT_texture_compression_dxt1" 
     "GL_EXT_timer_query" 
     "GL_KHR_blend_equation_advanced_coherent" 
     "GL_EXT_raster_multisample" 
     "GL_ARB_depth_texture" 
     "GL_ARB_texture_multisample" 
     "GL_NV_conditional_render" 
     "GL_NV_fragment_program2" 
     "GL_NV_scissor_exclusive" 
     "GL_ARB_texture_stencil8" 
     "GL_ARB_gpu_shader5" 
     "GL_ARB_query_buffer_object" 
     "GL_ARB_shading_language_packing" 
     "GL_EXT_depth_bounds_test" 
     "GL_ARB_shader_viewport_layer_array" 
     "GL_ARB_shader_texture_lod" 
     "GL_EXT_blend_color" 
     "GL_EXT_texture_array" 
     "GL_ARB_half_float_vertex" 
     "GL_ARB_explicit_uniform_location" 
     "GL_NV_sample_locations" 
     "GL_KHR_blend_equation_advanced" 
     "GL_ARB_seamless_cube_map" 
     "GL_ARB_texture_env_dot3" 
     "GL_NV_draw_texture" 
     "GL_NV_fence" 
     "GL_NV_shader_atomic_fp16_vector" 
     "GL_NV_texture_shader3" 
     "GL_NV_shader_atomic_float" 
     "GL_EXT_point_parameters" 
     "GL_ARB_buffer_storage" 
     "GL_NV_depth_buffer_float" 
     "GL_ARB_depth_buffer_float" 
     "GL_KHR_no_error" 
     "GL_EXT_texture_object" 
     "GL_ARB_vertex_buffer_object" 
     "GL_EXT_abgr" 
     "GL_ARB_occlusion_query2" 
     "GL_NV_shader_texture_footprint" 
     "GL_AMD_vertex_shader_viewport_index" 
     "GL_NV_memory_attachment" 
     "GL_ARB_multitexture" 
     "GL_NV_conservative_raster_pre_snap" 
     "GL_ARB_direct_state_access" 
     "GL_ARB_vertex_shader" 
     "GL_EXT_texture_cube_map" 
     "GL_NV_vertex_program" 
     "GL_ARB_enhanced_layouts" 
     "GL_SUN_slice_accum" 
     "GL_NV_copy_image" 
     "GL_ARB_texture_compression" 
     "GL_EXT_provoking_vertex" 
     "GL_ARB_conservative_depth" 
     "GL_NV_texture_multisample" 
     "GL_ARB_conditional_render_inverted" 
     "GL_ARB_shader_atomic_counter_ops" 
     "GL_EXT_draw_range_elements" 
     "GL_EXT_texture_lod_bias" 
     "GL_NV_gpu_program5_mem_extended" 
     "GL_ARB_sample_shading" 
     "GL_ARB_framebuffer_object" 
     "GL_NV_texture_barrier" 
     "GL_NV_conservative_raster_underestimation" 
     "GL_NV_vertex_program2" 
     "GL_EXT_packed_depth_stencil" 
     "GL_EXT_memory_object" 
     "GL_NV_parameter_buffer_object" 
     "GL_NV_framebuffer_mixed_samples" 
     "GL_EXT_separate_shader_objects" 
     "GL_NV_blend_minmax_factor" 
     "GL_ARB_compute_variable_group_size" 
     "GL_NVX_blend_equation_advanced_multi_draw_buffers" 
     "GL_ARB_window_pos" 
     "GL_NV_shader_buffer_load" 
     "GL_ARB_draw_instanced" 
     "GL_NV_shader_atomic_int64" 
     "GL_ARB_transpose_matrix" 
     "GL_NV_bindless_multi_draw_indirect" 
     "GL_ARB_separate_shader_objects" 
     "GL_EXT_texture_storage" 
     "GL_ARB_shader_image_size" 
     "GL_SGIS_generate_mipmap" 
     "GL_ARB_texture_gather" 
     "GL_NV_compute_shader_derivatives" 
     "GL_NV_vertex_buffer_unified_memory" 
     "GL_ARB_texture_mirror_clamp_to_edge" 
     "GL_NV_vertex_program2_option" 
     "GL_NV_viewport_swizzle" 
     "GL_EXT_direct_state_access" 
     "GL_NV_fragment_shader_interlock" 
     "GL_NV_texture_shader2" 
     "GL_NV_texture_shader" 
     "GL_ARB_stencil_texturing" 
     "GL_AMD_vertex_shader_layer" 
     "GL_NV_multisample_filter_hint" 
     "GL_ARB_fragment_layer_viewport" 
     "GL_ARB_depth_clamp" 
     "GL_NV_transform_feedback2" 
     "GL_EXT_framebuffer_object" 
     "GL_NV_texture_env_combine4" 
     "GL_ARB_transform_feedback_overflow_query" 
     "GL_ARB_sparse_texture2" 
     "GL_NV_shader_thread_group" 
     "GL_ARB_texture_storage" 
     "GL_EXT_fog_coord" 
     "GL_ARB_robust_buffer_access_behavior" 
     "GL_EXT_sparse_texture2" 
     "GL_ARB_texture_filter_anisotropic" 
     "GL_ARB_texture_view" 
     "GL_NV_conservative_raster_dilate" 
     "GL_EXT_texture_swizzle" 
     "GL_NV_light_max_exponent" 
     "GL_NV_viewport_array2" 
     "GL_ARB_shader_storage_buffer_object" 
     "GL_NV_shader_atomic_float64" 
     "GL_EXT_draw_instanced" 
     "GL_ARB_clip_control" 
     "GL_NV_feature_query" 
     "GL_NVX_linked_gpu_multicast" 
     "GL_SGIS_texture_lod" 
     "GL_ARB_texture_rg" 
     "GL_ARB_viewport_array" 
     "GL_NV_fragment_program" 
     "GL_EXT_draw_buffers2" 
     "GL_ARB_base_instance" 
     "GL_ARB_shader_precision" 
     "GL_ARB_transform_feedback_instanced" 
     "GL_NV_vertex_program1_1" 
     "GL_EXT_blend_equation_separate" 
     "GL_ARB_vertex_attrib_64bit" 
     "GL_EXT_semaphore_win32" 
     "GL_ARB_shading_language_include" 
     "GL_NVX_gpu_multicast2" 
     "GL_EXT_import_sync_object" 
     "GL_NV_timeline_semaphore" 
     "GL_NV_geometry_shader4" 
     "GL_NV_stereo_view_rendering" 
     "GL_ARB_texture_swizzle" 
     "GL_ARB_parallel_shader_compile" 
     "GL_EXT_multiview_timer_query" 
     "GL_NV_primitive_restart" 
     "GL_EXT_framebuffer_multisample" 
     "GL_ARB_shader_texture_image_samples" 
     "GL_ARB_pixel_buffer_object" 
     "GL_ARB_sync" 
     "GL_ARB_texture_rectangle" 
     "GL_NV_shader_storage_buffer_object" 
     "GL_EXT_shader_image_load_formatted" 
     "GL_NV_half_float" 
     "GL_EXT_texture_shadow_lod" 
     "GL_ARB_vertex_type_2_10_10_10_rev" 
     "GL_ARB_sample_locations" 
     "GL_NV_texture_dirty_tile_map" 
     "GL_ARB_provoking_vertex" 
     "GL_EXT_shader_integer_mix" 
     "GL_ARB_fragment_shader" 
     "GL_ARB_shader_subroutine" 
     "GL_EXT_texture_env_combine" 
     "GL_NV_ES3_1_compatibility" 
     "GL_ARB_invalidate_subdata" 
     "GL_ARB_point_sprite" 
     "GL_ARB_texture_filter_minmax" 
     "GL_ARB_shader_objects" 
     "GL_NV_texture_compression_vtc" 
     "GL_ARB_map_buffer_alignment" 
     "GL_ARB_texture_compression_bptc" 
     "GL_ARB_transform_feedback3" 
     "GL_KHR_context_flush_control" 
     "GL_ARB_compatibility" 
     "GL_EXT_win32_keyed_mutex" 
     "GL_ARB_vertex_array_object" 
     "GL_NV_shader_atomic_counters" 
     "GL_EXT_bgra" 
     "GL_ARB_texture_query_lod" 
     "GL_ARB_copy_buffer" 
     "GL_EXT_packed_float" 
     "GL_NV_depth_clamp" 
     "GL_NV_internalformat_sample_query" 
     "GL_EXT_texture_integer" 
     "GL_ARB_texture_non_power_of_two" 
     "GL_ARB_program_interface_query" 
     "GL_EXT_window_rectangles" 
     "GL_ARB_indirect_parameters" 
     "GL_ARB_texture_query_levels" 
     "GL_EXT_post_depth_coverage" 
     "GL_NV_draw_vulkan_image" 
     "GL_ARB_texture_mirrored_repeat" 
     "GL_ATI_texture_mirror_once" 
     "GL_ARB_geometry_shader4" 
     "GL_ARB_gpu_shader_fp64" 
     "GL_NV_gpu_shader5" 
     "GL_KHR_debug" 
     "GL_ARB_get_program_binary" 
     "GL_EXT_gpu_shader4" 

QPA OpenGL Detection Info 
  supportsDesktopGL: true 
  supportsAngleD3D11: true 
  isQtPreferAngle: true 

useBufferInvalidation (config option): false


Hardware Information

  GPU Acceleration: desktop
  Memory: 32538 Mb
  Number of Cores: 12
  Swap Location: C:/Users/spine/AppData/Local/Temp
  Built for: sse2
  Base instruction set: fma3+avx2
  Supported instruction sets: fma3+avx2 avx2 fma3+avx avx fma4 fma3+sse4.2 sse4.2 sse4.1 ssse3 sse3 sse2 

Current Settings

  Current Swap Location: C:/Users/spine/AppData/Local/Temp
  Current Swap Location writable: true
  Undo Enabled: true
  Undo Stack Limit: 200
  Use OpenGL: true
  Use OpenGL Texture Buffer: true
  Disable Vector Optimizations: false
  Disable AVX Optimizations: false
  Canvas State: OPENGL_SUCCESS
  Autosave Interval: 420
  Use Backup Files: false
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Backup Location writable: false
  Use Win8 Pointer Input: false
  Use RightMiddleTabletButton Workaround: false
  Levels of Detail Enabled: false
  Use Zip64: false


Loaded Python Plugins
	colorspace
	comics_project_management_tools
	documenttools
	exportlayers
	filtermanager
	lastdocumentsdocker
	plugin_importer
	quick_settings_docker
	scripter
	tenbrushes
	tenscripts


Display Information
Number of screens: 2
	Screen: 0
		Name: \\.\DISPLAY1
		Depth: 32
		Scale: 1
		Physical DPI109.201
		Logical DPI96
		Physical Size: 800, 335
		Position: 0, 0
		Resolution in pixels: 3440x1440
		Manufacturer: 
		Model: 
		Refresh Rate: 60
	Screen: 1
		Name: \\.\DISPLAY2
		Depth: 32
		Scale: 1
		Physical DPI166.066
		Logical DPI96
		Physical Size: 294, 165
		Position: 757, 1440
		Resolution in pixels: 1920x1080
		Manufacturer: 
		Model: 
		Refresh Rate: 60

Current Settings

  Current Swap Location: C:/Users/spine/AppData/Local/Temp
  Current Swap Location writable: true
  Undo Enabled: true
  Undo Stack Limit: 200
  Use OpenGL: true
  Use OpenGL Texture Buffer: true
  Disable Vector Optimizations: false
  Disable AVX Optimizations: false
  Canvas State: OPENGL_SUCCESS
  Autosave Interval: 420
  Use Backup Files: false
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Backup Location writable: false
  Use Win8 Pointer Input: false
  Use RightMiddleTabletButton Workaround: false
  Levels of Detail Enabled: false
  Use Zip64: false
Comment 1 Lynx3d 2022-10-22 18:22:21 UTC
Yes I can confirm on Linux with (somewhat recent) master too, a layer inserted via drag&drop seems to have permanently broken undo/redo updates.
No SAFE_ASSERT triggering or anything, so no idea what's up.
Comment 2 spinear 2022-10-23 00:39:43 UTC
update.
add colorize mask -> paint -> update -> convert to paint layer
This converted layer also has the same bug.
I hope it helps.(In reply to Lynx3d from comment #1)
> Yes I can confirm on Linux with (somewhat recent) master too, a layer
> inserted via drag&drop seems to have permanently broken undo/redo updates.
> No SAFE_ASSERT triggering or anything, so no idea what's up.

update.
add colorize mask -> paint -> update -> convert to paint layer
This converted layer also has the same bug.
I hope it helps.
Comment 3 spinear 2022-10-23 03:53:21 UTC
update
A layer made by 'split into layers' has the same issue.
Comment 4 Dmitry Kazakov 2022-10-28 07:28:59 UTC
Git commit 34261b0986538ca22c897b0fa07b4185b0340378 by Dmitry Kazakov.
Committed on 28/10/2022 at 07:28.
Pushed by dkazakov into branch 'master'.

Make sure that the parent layer of the paster clip is initialized correctly

M  +1    -0    libs/image/kis_paint_layer.cc

https://invent.kde.org/graphics/krita/commit/34261b0986538ca22c897b0fa07b4185b0340378
Comment 5 Dmitry Kazakov 2022-10-28 07:32:08 UTC
Just a note: this bug was a regression in master, it does not require a fix for 5.1