Make sure that the parent layer of the paster clip is initialized correctly

BUG:460848